Fix navbar not aligned in desktop

--- a/packages/clay/src/scss/lr7-bootstrap-theme/_navbar.scss
+++ b/packages/clay/src/scss/lr7-bootstrap-theme/_navbar.scss
@@ -146,15 +146,17 @@
 		}
 	}
 
-	.collapse {
-		display: block;
-	}
+	@media (max-width: $grid-float-breakpoint-max) {
+		.collapse {
+			display: block;
+		}
 
-	.navbar-collapse {
-		border-width: 0;
-		margin: 0;
-		position: absolute;
-		top: 0;
+		.navbar-collapse {
+			border-width: 0;
+			margin: 0;
+			position: absolute;
+			top: 0;
+		}
 	}
 }
 
